// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Comparator Basic Change Renames > interface with property changing from one interface to another - renamed 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,11 +1,23 @@
export interface ChatMessage {
-  content: TextContentRenamed;
+  content: MessageContent;
+
  id: string;
+
+  read: boolean;
+
  sender: string;
+
  timestamp: number;
}

-export interface TextContentRenamed {
+export interface MessageContent {
+  data: TextData;
+
+  type: 'text' | 'image' | 'file';
+}
+
+export interface TextData {
+  format: 'plain' | 'markdown' | 'html';
+
  text: string;
-  contentFormat: 'plain' | 'markdown';
}"
`;

exports[`Comparator Basic Change Renames > property changes from array to specific interface - renamed 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,9 +1,29 @@
export interface LibraryContent {
-  books: BookRenamed[];
-  magazines: any[];
+  books: BookCollection;
+
+  magazines: MagazineCollection;
}

-export interface BookRenamed {
+export interface BookCollection {
+  count: number;
+
+  items: Book[];
+
+  lastUpdated: Date;
+}
+
+export interface MagazineCollection {
+  count: number;
+
+  items: Magazine[];
+
+  lastUpdated: Date;
+}
+
+export interface Magazine {
+  issue: number;
+
+  publisher: string;
+
  title: string;
-  author: string;
}"
`;

exports[`Comparator Basic Change Renames > property type changes from interface to primitive - renamed 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,10 +1,5 @@
export interface GameState {
-  player: PlayerStatsRenamed;
+  player: string;
+
  gameMode: string;
}
-
-export interface PlayerStatsRenamed {
-  score: number;
-  level: number;
-  achievements: string[];
-}"
`;

exports[`Comparator Basic Property Changes > interface with property changing from one interface to another 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,11 +1,23 @@
export interface ChatMessage {
-  content: TextContent;
+  content: MessageContent;
+
  id: string;
+
+  read: boolean;
+
  sender: string;
+
  timestamp: number;
}

-export interface TextContent {
+export interface MessageContent {
+  data: TextData;
+
+  type: 'text' | 'image' | 'file';
+}
+
+export interface TextData {
+  format: 'plain' | 'markdown' | 'html';
+
  text: string;
-  contentFormat: 'plain' | 'markdown';
}"
`;

exports[`Comparator Basic Property Changes > property changes from array to specific interface 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,9 +1,35 @@
export interface LibraryContent {
-  books: Book[];
-  magazines: any[];
+  books: BookCollection;
+
+  magazines: MagazineCollection;
}

export interface Book {
  title: string;
+
  author: string;
}
+
+export interface BookCollection {
+  count: number;
+
+  items: Book[];
+
+  lastUpdated: Date;
+}
+
+export interface MagazineCollection {
+  count: number;
+
+  items: Magazine[];
+
+  lastUpdated: Date;
+}
+
+export interface Magazine {
+  issue: number;
+
+  publisher: string;
+
+  title: string;
+}"
`;

exports[`Comparator Basic Property Changes > property type changes from interface to primitive 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,10 +1,5 @@
export interface GameState {
-  player: PlayerStats;
+  player: string;
+
  gameMode: string;
}
-
-export interface PlayerStats {
-  score: number;
-  level: number;
-  achievements: string[];
-}"
`;

exports[`Comparator Basic Property Changes > property type changes from primitive to interface 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,4 +1,13 @@
export interface UserSettings {
-  profile: string;
+  profile: UserProfile;
+
  preferences: Record<string, boolean>;
}
+
+export interface UserProfile {
+  avatar: string;
+
+  bio: string;
+
+  displayName: string;
+}"
`;

exports[`Comparator Basic Property Changes > simple add missing property 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,3 +1,5 @@
export interface SimpleInterface {
  existingProp: string;
+
+  newProp: number;
}"
`;

exports[`Comparator Basic Property Changes > simple remove property 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,4 +1,3 @@
export interface SimpleInterface {
  existingProp: string;
-  newProp: number;
}"
`;

exports[`Comparator Basic Property Changes > simple type mismatch 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,3 +1,3 @@
export interface SimpleInterface {
-  existingProp: string;
+  existingProp: number;
}"
`;
